# rhs_first_assign

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
