[package]
edition = "2018"
name = "rhs_first_assign"
version = "0.0.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
description = "An attribute macro to hack compound assignment."
readme = "README.md"
keywords = ["macro"]
categories = ["development-tools", "rust-patterns"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/qryxip/rhs_first_assign"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.8", features = ["span-locations"] }
syn = { version = "1.0.14", features = ["full", "parsing", "printing", "visit-mut"] }
quote = "1.0.2"
if_chain = "1.0.0"
